<resources>
    <string name="app_name">TestTaskSearchForTickets</string>
    <string name="air_tickets">Aвиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="brief">Короче</string>
    <string name="subscriptions">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="stub">Сервис временно недоступен</string>
    <string name="finding_cheap_flights">Поиск дешевых\n авиабилетов</string>
    <string name="help_from_where">Откуда - Москва</string>
    <string name="help_to_where">Куда - Турция</string>
    <string name="fly_away_musically">Музыкально отлететь</string>
    <string name="currency_ruble">₽</string>
    <string name="from">от</string>
    <string name="difficult_route">Сложный\nмаршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekend">Выходные</string>
    <string name="hot_tickets">Горячие\nбилеты</string>
    <string name="one_economy">1,эконом</string>
    <string name="back">обратно</string>
    <string name="test_date">24 фев<font color='#9F9F9F'>, сб</font></string>
    <string name="sunday">пн</string>
    <string name="monday">вт</string>
    <string name="tuesday">ср</string>
    <string name="wednesday">чт</string>
    <string name="thursday">пт</string>
    <string name="friday">сб</string>
    <string name="saturday">вс</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="filter">Фильтр</string>
    <string name="price_chart">График цен</string>
    <string name="hour">ч</string>
    <string name="no_transfers">Без пересадок</string>
    <string name="with_transfers">С пересадками</string>
</resources>
