<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/select_air_tickets"
        android:title="@string/air_tickets"
        android:icon="@drawable/airplane_icon"
        android:orderInCategory="1" />

    <item android:id="@+id/select_hotels"
        android:title="@string/hotels"
        android:icon="@drawable/hotels_icon"
        android:orderInCategory="2" />

    <item android:id="@+id/select_geolocation"
        android:title="@string/brief"
        android:icon="@drawable/geolocation_icon"
        android:orderInCategory="3" />

    <item android:id="@+id/select_subscriptions"
        android:title="@string/subscriptions"
        android:icon="@drawable/bell_icon"
        android:orderInCategory="4" />

    <item android:id="@+id/select_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"
        android:orderInCategory="5" />

</menu>
