<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_wash"
    tools:context=".presenter.selectCountry.SelectCountryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/search_edit_text_container_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/search_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/arrow_back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/from_where_editText"
            style="@style/textInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/help_from_where"
            android:paddingStart="0dp"
            android:textAppearance="@style/MainScreenTextStyle"
            android:textColor="@color/white"
            android:textColorHint="@color/dark_gray"
            app:layout_constraintStart_toStartOf="@+id/line"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/swap_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/swap_icon"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintEnd_toEndOf="@+id/line" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:background="@color/castlerock"
            app:layout_constraintBottom_toTopOf="@+id/to_where_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/search_imageView"
            app:layout_constraintTop_toBottomOf="@+id/from_where_editText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/to_where_editText"
            style="@style/textInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/help_to_where"
            android:paddingStart="0dp"
            android:textAppearance="@style/MainScreenTextStyle"
            android:textColor="@color/white"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeWidth="0px"
            app:boxStrokeWidthFocused="0px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/line" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/clear_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/clear_icon"
            app:layout_constraintEnd_toEndOf="@+id/line"
            app:layout_constraintTop_toBottomOf="@+id/line" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toStartOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_date_button"
            style="@style/KeyboardButtonStyle"
            android:text="@string/back"
            android:drawableStart="@drawable/plus_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_date_button"
            style="@style/KeyboardButtonStyle"
            android:layout_marginStart="29dp"
            android:text="@string/test_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_date_button"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/count_people_button"
            style="@style/KeyboardButtonStyle"
            android:layout_marginStart="29dp"
            android:drawableStart="@drawable/people_icon"
            android:text="@string/one_economy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_date_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_button"
        android:layout_width="50dp"
        android:layout_margin="20dp"
        style="@style/KeyboardButtonStyle"
        android:drawableStart="@drawable/settings_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_margin="20dp"
        android:background="@drawable/tickets_offers_background"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/direct_flights_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct_flights"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tickets_offers_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/direct_flights_textView"
            tools:listitem="@layout/tickets_offers_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/all_tickets_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Посмотреть все билеты"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/all_tickets_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

</androidx.constraintlayout.widget.ConstraintLayout>
